--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
     <body>
         <h1> Hello Nishali </h1>
         <h2> Welcome to DevOps Training</h2>
-        <h3> Welcome to Docker & containers </h3>
+        <h3> Welcome to Docker & containers ! </h3>
     </body>
 </html>
