--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
         <h1> Hello Nishali </h1>
         <h2> Welcome to DevOps Training</h2>
         <h3> Welcome to Docker & containers ! </h3>
+        <p>Updating code in dev branch</p>
     </body>
 </html>
