--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
         <h2> Welcome to DevOps Training</h2>
         <h3> Welcome to Docker & containers ! </h3>
         <p>Updating code in dev branch</p>
+        <h1> Hello this is new update on day 5 </h1>
     </body>
 </html>
